--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-<h1>Ayo this is a website<h1>
+<h1>Christofer Wolak Photography<h1>
 
-<h2>writing code hurts my little brain<h2>
+<h2>HTML TEST<h2>
 </body>
 </html>
